--- a/infinite/index.html
+++ b/infinite/index.html
@@ -1,8 +1,110 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 </head>
     <script src="infinite/infinite.js"></script>
     <script src="infinite.js"></script>
+</body>
+</html>
+ -->
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>374 Toggle Buttons</title>
+    <style>
+        body {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 25px;
+            margin: 5px;
+        }
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: 0.4s;
+            border-radius: 25px;
+        }
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 19px;
+            width: 19px;
+            left: 3px;
+            bottom: 3px;
+            background-color: white;
+            transition: 0.4s;
+            border-radius: 50%;
+        }
+        input:checked + .slider {
+            background-color: #4CAF50;
+        }
+        input:checked + .slider:before {
+            transform: translateX(25px);
+        }
+        #container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
+</head>
+<body>
+    <div id="container"></div>
+    <script>
+        const container = document.getElementById('container');
+        const totalButtons = 374;
+        let switches = [];
+
+        // Generate 374 toggle switches
+        for (let i = 0; i < totalButtons; i++) {
+            const switchDiv = document.createElement('div');
+            switchDiv.className = 'switch';
+            switchDiv.innerHTML = `
+                <label>
+                    <input type="checkbox" data-index="${i}">
+                    <span class="slider"></span>
+                </label>
+            `;
+            container.appendChild(switchDiv);
+            switches.push(switchDiv.querySelector('input'));
+        }
+
+        // Check if all switches are activated
+        function checkWin() {
+            if (switches.every(switchEl => switchEl.checked)) {
+                document.body.style.backgroundColor = "black";
+                container.style.display = "none";
+            }
+        }
+
+        // Attach event listeners to each switch
+        switches.forEach(switchEl => {
+            switchEl.addEventListener('change', checkWin);
+        });
+    </script>
 </body>
 </html>
