--- a/translator/index.html
+++ b/translator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enchantment Table Translator</title>
+    <title>Translator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,49 +34,78 @@
             border: 1px solid #ddd;
             text-align: center;
         }
+        td {
+            width: 3%;
+        }
     </style>
 </head>
 <body>
-    <h3>Translator</h3>
+    <h3></h3>
     <div class="container">
         <textarea id="englishInput" placeholder="Type English here"></textarea>
-        <textarea id="enchantedInput" placeholder="Type Enchanted Language here"></textarea>
+        <textarea id="enchantedInput" placeholder="Type other Language here"></textarea>
     </div>
 
     <table>
         <thead>
             <tr>
-                <th>English</th>
-                <th>Translated</th>
+                <th>A</th>
+                <th>B</th>
+                <th>C</th>
+                <th>D</th>
+                <th>E</th>
+                <th>F</th>
+                <th>G</th>
+                <th>H</th>
+                <th>I</th>
+                <th>J</th>
+                <th>K</th>
+                <th>L</th>
+                <th>M</th>
+                <th>N</th>
+                <th>O</th>
+                <th>P</th>
+                <th>Q</th>
+                <th>R</th>
+                <th>S</th>
+                <th>T</th>
+                <th>U</th>
+                <th>V</th>
+                <th>W</th>
+                <th>X</th>
+                <th>Y</th>
+                <th>Z</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td>A</td><td>ᔑ</td></tr>
-            <tr><td>B</td><td>ʖ</td></tr>
-            <tr><td>C</td><td>ᓵ</td></tr>
-            <tr><td>D</td><td>↸</td></tr>
-            <tr><td>E</td><td>ᒷ</td></tr>
-            <tr><td>F</td><td>⎓</td></tr>
-            <tr><td>G</td><td>⊣</td></tr>
-            <tr><td>H</td><td>⍑</td></tr>
-            <tr><td>I</td><td>╎</td></tr>
-            <tr><td>J</td><td>⋮</td></tr>
-            <tr><td>K</td><td>ꖌ</td></tr>
-            <tr><td>L</td><td>ꖎ</td></tr>
-            <tr><td>M</td><td>ᒲ</td></tr>
-            <tr><td>N</td><td>リ</td></tr>
-            <tr><td>O</td><td>𝙹</td></tr>
-            <tr><td>P</td><td>!¡</td></tr>
-            <tr><td>Q</td><td>ᑑ</td></tr>
-            <tr><td>R</td><td>∷</td></tr>
-            <tr><td>S</td><td>ᓭ</td></tr>
-            <tr><td>T</td><td>ℸ</td></tr>
-            <tr><td>U</td><td>⚍</td></tr>
-            <tr><td>V</td><td>⍊</td></tr>
-            <tr><td>W</td><td>∴</td></tr>
-            <tr><td>X</td><td>̇/</td></tr>
-            <tr><td>Y</td><td>||</td></tr>
-            <tr><td>Z</td><td>⨅</td></tr>
+            <tr>
+                <td>ᔑ</td>
+                <td>ʖ</td>
+                <td>ᓵ</td>
+                <td>↸</td>
+                <td>ᒷ</td>
+                <td>⎓</td>
+                <td>⊣</td>
+                <td>⍑</td>
+                <td>╎</td>
+                <td>⋮</td>
+                <td>ꖌ</td>
+                <td>ꖎ</td>
+                <td>ᒲ</td>
+                <td>リ</td>
+                <td>𝙹</td>
+                <td>!¡</td>
+                <td>ᑑ</td>
+                <td>∷</td>
+                <td>ᓭ</td>
+                <td>ℸ</td>
+                <td>⚍</td>
+                <td>⍊</td>
+                <td>∴</td>
+                <td>̇/</td>
+                <td>||</td>
+                <td>⨅</td>
+            </tr>
         </tbody>
     </table>
 
