--- a/tone/index.html
+++ b/tone/index.html
@@ -48,26 +48,31 @@
       font-size: 16px;
     }
 
+    .file-input-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      margin: 10px 0;
+    }
+
     input[type="file"] {
       background-color: #2c2c2c;
-      border: 1px solid #4e4e4e;
       color: white;
+      border: 1px solid #4e4e4e;
       border-radius: 5px;
       cursor: pointer;
       padding: 5px;
+      flex: 1;
+       /* Hides the default text */
     }
 
     input[type="file"]::-webkit-file-upload-button {
-      background-color: #3c3c3c;
+      background-color: #2c2c2c;
       color: white;
-      border: 1px solid #5a5a5a;
+      border: 1px solid #4e4e4e;
+      padding: 5px;
       cursor: pointer;
-      padding: 3px;
-      border-radius: 1px;
-    }
-
-    input[type="file"]::-webkit-file-upload-button:hover {
-      background-color: #4e4e4e;
     }
 
     button {
@@ -77,7 +82,7 @@
       border: 1px solid #5a5a5a;
       cursor: pointer;
       border-radius: 5px;
-      margin-top: 10px;
+      margin-left: 10px;
     }
 
     button:hover {
@@ -130,7 +135,7 @@
       </select>
     </div>
 
-    <div class="inline">
+    <div class="file-input-container">
       <label for="file-input">Import Custom Sound:</label>
       <input type="file" id="file-input" accept="audio/*,video/*">
       <button id="add-sound">Import</button>
